maziņu kļūdiņu izlaboju

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <span class="navbar-text navbar-nav mx-n2 kontaktinformacija">
         <a href="tel:26183828;" class="px-3 nav-link">  <i class="fa fa-phone colour" aria-hidden="true" ></i>  26183828</a>
         <a href="tel:29676337;" class="px-3 nav-link"> <i class="fa fa-phone colour" aria-hidden="true"></i>  28624927</a>
-        <a href="mailto:ozmaajaa@gmail.com" class="px-3 nav-link"> <i class="fa fa-envelope" aria-hidden="true"></i>  info@maajaa.lv</a>
+        <a href="mailto:ozmaajaa@gmail.com" class="px-3 nav-link"> <i class="fa fa-envelope" aria-hidden="true"></i>  ozmaajaa@gmail.lv</a>
       </div>
     </div>
 
@@ -262,7 +262,6 @@ Atsaucīga komunikācija!</p>
         </div>  
 
         <p class="text2">Žirafes māja</p>
-
       </div>
 
   
@@ -271,7 +270,7 @@ Atsaucīga komunikācija!</p>
   <!-- Footer-->
 
   <footer class="bgfooter textbottom pe-5">
-    <div class="container-fluid d-flex justify-content-between" id="kontakti">
+    <div class="container-fluid d-flex justify-content-between flex-md-row flex-column" id="kontakti">
       <div class="row">
         <div class="col-sm">
           <p>SIA "maajaa" <br> Lejasciema 11, Rīga LV-1024 <br> Reģ. nr. LV40203122041
