--- a/index.html
+++ b/index.html
@@ -227,16 +227,20 @@ Atsaucīga komunikācija!</p>
 <!--Realizētie projekti galerija-->
 <div class="container-fluid">
     <div class="row" id="projekti">
+      
+
+      
+
       <div class="col-sm togglable">
+
         <div class="front">
-          <img src="IMG/Aktu zale.jpeg " style="width:100%" >
-          <div class="back">
-            <p class="text4">Sienu špaktelēšana un krāsošana.</p>                    
-          </div>                 
+          <img src="IMG/DSC_8480projekti.jpg" style="width:100%" >
+          <div class="back"> 
+            <p class="text4">Būvniecība no pamatiem līdz atslēgām.</p>
+            </div>                   
         </div>  
 
-        <p class="text2">Aktu zāle</p> 
-
+        <p class="text2">Divstāvu privātmāja</p>
       </div>
 
       <div class="col-sm togglable">
@@ -253,18 +257,17 @@ Atsaucīga komunikācija!</p>
       </div>
 
       <div class="col-sm togglable">
-
         <div class="front">
-          <img src="IMG/zirafes maja zoo.webp" style="width:100%" >
-          <div class="back"> 
-            <p class="text4">Dēļu apdare žirafēm.</p>
-            </div>                   
+          <img src="IMG/Aktu zale.jpeg " style="width:100%" >
+          <div class="back">
+            <p class="text4">Sienu špaktelēšana un krāsošana.</p>                    
+          </div>                 
         </div>  
 
-        <p class="text2">Žirafes māja</p>
-      </div>
+        <p class="text2">Aktu zāle</p> 
 
-  
+      </div>
+    </div>
   <!--Realizētie projekti galerijas beigas-->
 
   <!-- Footer-->
