--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <span class="navbar-text navbar-nav mx-n2 kontaktinformacija">
         <a href="tel:26183828;" class="px-3 nav-link">  <i class="fa fa-phone colour" aria-hidden="true" ></i>  26183828</a>
         <a href="tel:29676337;" class="px-3 nav-link"> <i class="fa fa-phone colour" aria-hidden="true"></i>  28624927</a>
-        <a href="mailto:ozmaajaa@gmail.com" class="px-3 nav-link"> <i class="fa fa-envelope" aria-hidden="true"></i>  ozmaajaa@gmail.lv</a>
+        <a href="mailto:ozmaajaa@gmail.com" class="px-3 nav-link"> <i class="fa fa-envelope" aria-hidden="true"></i>  ozmaajaa@gmail.com</a>
       </div>
     </div>
 
